# CyclingCalculator

./: CMakeLists.txt  README.md  plot_power_comparison.ipynb
src/: estimate_power.cpp  estimate_power.h  getopt.cpp  getopt.h  io.cpp  io.h  main.cpp  math.cpp  math.h  physics.cpp  physics.h
tests/: 145k.csv  145k.fit  160k.csv  160k.fit  500k.fit  75k_hill.csv  75k_hill.fit  VAM.ipynb  test.fit  test_ride.csv  test_route.gpx
